26-Aug-2015 Geraldine Conti
	* Added CR3L code :
	* ZeroLeptonCR3L.cxx/h added
	* zerolepton.config, zeroleptontruth.config : added cr3l, vr3l
	* LinkDef.h : added CR3L
	* ZeroLeptonNTVars.cxx/h : added variables for CL3L

26-Aug-2015 Geraldine Conti
	* Code for new reclustering added:
	* INSTALL : added line for new package xAODJetReclustering
	* PhysObjProxyFiller.cxx/h : initialization of the reclustering
	tool,added function FillJetReclProxies to fill recl. jets
	* ZeroLeptonCRWT.cxx/h, ZeroLeptonCRY.cxx/h, ZeroLeptonCRZ.cxx/h
	ZeroLeptonDataDrivenQCD.cxx, ZeroLeptonSR.cxx/h : added bool m_doRecl,
	std::string m_suffixRecl (needed to give different names in the recljet
	collections) in PhysObjProxyFiller
	* Makefile.RootCore : added dependence to new package
	* BosonTagging.cxx/h

26-Aug-2015 Geraldine Conti
	* Added phTruthType, phTruthOrigin, phisEMvalue needed for ABCD method
	in ZeroLeptonCRY.cxx/h and ZeroLeptonNTVars.cxx/h

14-Aug-2015 Laurent Duflot
	* MCInfoProcessor: add option to produce a JSON file with hardproc
	informations to allow building a DB of initial harproc counts
	(needed for proper normalisation of multi process samples)
	* zson.config: example config file for a job producing json hardproc file.
	* BuidSUSYObjects: switch to default SUSYTools for JVT (jet and MET)
	* PhysObjProxies: add isSignal() method to JetProxy
	* ZeroLeptionCRWT: adapt to interface change in JetProxy

12-Aug-2015 Laurent Duflot
	* zerolepton.config: comment out second PRW file (25ns) as both files
	seem to be combined in the tool for 50ns reweighting.
	* FilterUpdateMerge.py: set batch mode.
	* PhysObjProxyUtils: calculate sphericity/aplanarity for jets>40GeV


11-Aug-2015 Laurent Duflot
	* mc15_13TeV_MCSampleList.py: update diboson list
	* buildRSEFileList: build pickle file with datasets on storage element
	* getMCInfo.py, FilterUpdateMerge.py: allow to use pickle file as file
	input list
	* README: update with merging using files on storage element
