@@ -19,6 +19,7 @@ Global.DerivationTag: p2375
 Global.DoSystematics: FALSE
 Global.SystematicsSelection: *
 Global.fillTRJigsawVars: TRUE
+#Global.doRecl: TRUE
 
 # ---------------------------  Run configuration ----------------------
 cafe.Run:  JobBookeeping cafe::IfPr(datamc) BuildSUSYObjects(susyobjs) BuildSUSYObjects(susyobjsy) ZeroLeptonSystVariations(systloop) 
@@ -86,6 +87,8 @@ sr.DoSystematics: %{Global.DoSystematics}
 sr.Period: %{Global.Period}
 sr.DerivationTag: %{Global.DerivationTag}
 sr.fillTRJigsawVars: %{Global.fillTRJigsawVars}
+#sr.doRecl: %{Global.doRecl}
+#sr.suffixRecl: sr 
 
 # ---------------------------  CRWT Region -----------------
 crwt.IsData: %{Global.IsData}
@@ -105,6 +108,8 @@ vrwt.DoSystematics: %{Global.DoSystematics}
 vrwt.Period: %{Global.Period}
 vrwt.DerivationTag: %{Global.DerivationTag}
 vrwt.fillTRJigsawVars: %{Global.fillTRJigsawVars}
+#vrwt.doRecl: %{Global.doRecl}  
+#vrwt.suffixRecl: vrwt 
 
 # ---------------------------  CRZ Region -----------------
 crz.IsData: %{Global.IsData}
@@ -114,6 +119,8 @@ crz.DoSystematics: %{Global.DoSystematics}
 crz.Period: %{Global.Period}
 crz.DerivationTag: %{Global.DerivationTag}
 crz.fillTRJigsawVars: %{Global.fillTRJigsawVars}
+#crz.doRecl: %{Global.doRecl}
+#crz.suffixRecl: crz
 
 # --------------------------- CR3L Region -----------------                                                                   
 
